Update Makefile to work on MacOS and Linux

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,3 +1,5 @@
+UNAME_S := ${shell uname}
+
 NAME = philo
 SRCS = philo.c
 OBJS = ${SRCS:.c=.o}
@@ -5,10 +7,20 @@ OBJS = ${SRCS:.c=.o}
 all: $(NAME)
 
 $(OBJS): %.o : %.c
+ifeq ($(UNAME_S),Linux)
+	gcc -c -Wall -Wextra -Werror $< -o $@ -lpthread
+endif
+ifeq ($(UNAME_S),Darwin)
 	gcc -c -Wall -Wextra -Werror $< -o $@
+endif
 
 $(NAME): $(OBJS)
+ifeq ($(UNAME_S),Linux)
+	gcc -Wall -Wextra -Werror $(OBJS) -o $(NAME) -lpthread
+endif
+ifeq ($(UNAME_S),Darwin)
 	gcc -Wall -Wextra -Werror $(OBJS) -o $(NAME)
+endif
 
 clean:
 	rm -f $(OBJS)
@@ -22,6 +34,6 @@ norm:
 	norminette $(SRCS)
 
 test: $(NAME)
-	@python3 tests/test.py
+	@python3.7 tests/test.py
 
 .PHONY: all clean fclean re test norm
