--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,8 +1,9 @@
 UNAME_S := ${shell uname}
 
 NAME = philo
-HEADERS = philo.h
-SRCS = philo.c
+HEADERS = srcs/philo.h
+SRCS = srcs/philo.c srcs/arguments.c srcs/main.c srcs/data.c \
+	   srcs/utils.c srcs/forks.c srcs/manager.c
 OBJS = ${SRCS:.c=.o}
 
 all: $(NAME)
