--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,5 +1,7 @@
 UNAME_S := ${shell uname}
 
+FLAGS := -Wall -Wextra -Werror
+
 NAME = philo
 HEADERS = srcs/philo.h
 SRCS = srcs/philo.c srcs/arguments.c srcs/main.c srcs/data.c \
@@ -10,18 +12,18 @@ all: $(NAME)
 
 $(OBJS): %.o : %.c $(HEADERS)
 ifeq ($(UNAME_S),Linux)
-	gcc -c -Wall -Wextra -Werror $< -o $@ -lpthread
+	gcc -c $(FLAGS) $< -o $@ -lpthread
 endif
 ifeq ($(UNAME_S),Darwin)
-	gcc -c -Wall -Wextra -Werror $< -o $@
+	gcc -c $(FLAGS) $< -o $@
 endif
 
 $(NAME): $(OBJS)
 ifeq ($(UNAME_S),Linux)
-	gcc -Wall -Wextra -Werror $(OBJS) -o $(NAME) -lpthread
+	gcc $(FLAGS) $(OBJS) -o $(NAME) -lpthread
 endif
 ifeq ($(UNAME_S),Darwin)
-	gcc -Wall -Wextra -Werror $(OBJS) -o $(NAME)
+	gcc $(FLAGS) $(OBJS) -o $(NAME)
 endif
 
 clean:
