Remove playing_lock to speed up operations
Possible problems with large numbers of philos

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -17,10 +17,11 @@ HEADERS = $(INCLUDES_DIR)/philo.h
 SRCS = philo.c \
 	   arguments.c main.c data.c \
 	   utils.c forks.c manager.c \
-	   accessors/playing.c \
+	   rejoin_threads.c \
 	   accessors/philo_alive.c \
 	   accessors/philo_time_of_last_meal.c \
 	   accessors/philo_times_eaten.c
+
 OBJS := $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
 
 all: $(NAME)
